--- a/TPI_GRUPO_25/Site.Master
+++ b/TPI_GRUPO_25/Site.Master
@@ -13,7 +13,7 @@
 </head>
 <body>
     <form id="form1" runat="server">
-        <div class="container py-4">
+        <div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server" />
         </div>
     </form>
